--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ CRS_SANDBOX_CONFIG=exp-prequal-vantage4
 CRS_SANDBOX_BIRTHDATE=1963-11-12
 CRS_SANDBOX_SSN=666265040
 CRS_TIMEOUT_SECONDS=30
+CRS_ENABLE_DEMO_FALLBACK=true
