--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,28 @@ CRS_SANDBOX_BIRTHDATE=1963-11-12
 CRS_SANDBOX_SSN=666265040
 CRS_TIMEOUT_SECONDS=30
 CRS_ENABLE_DEMO_FALLBACK=true
+
+# Storage backend: sqlite (default) or mongo
+STORAGE_BACKEND=sqlite
+SQLITE_DB_PATH=data/terrafin.db
+
+# LLM debug logs
+LLM_DEBUG_LOGS=true
+LLM_LOG_DIR=logs/llm
+
+# AI provider routing
+# Primary backend: openai, ollama, or gemini
+AI_BACKEND=openai
+# Optional fallback backend: openai, gemini, ollama, or none
+AI_FALLBACK_BACKEND=gemini
+
+# OpenAI config
+OPENAI_API_KEY=<your-openai-key>
+OPENAI_BASE_URL=https://api.openai.com/v1
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_TIMEOUT_SECONDS=60
+
+# Ollama config
+OLLAMA_BASE_URL=http://127.0.0.1:11434
+OLLAMA_MODEL=qwen2.5:3b
+OLLAMA_TIMEOUT_SECONDS=60
